# valar-bench

./: Makefile.am  ProjectHome.md  Valar.md  configure.ac
clhaptic/: Makefile.am
clhaptic/libanalysis-devices/: analysis-devices.cpp  analysis-devices.h  device-compare-images.cpp  monitored-queue.h
clhaptic/libanalysis-devices/.deps/: libanalysis_devices_a-analysis-devices.Po  libanalysis_devices_a-monitored-queue.Po
clhaptic/libinterceptor/: Create_Images.c  Enqueue_Buffers.c  Makefile.am  README  interceptor.h  opencltest.c  test.c
clhaptic/libmisc/: movingavg.cpp  timer.cpp
clhaptic/libmisc/.deps/: libmisc_a-kernel-object.Po  libmisc_a-logger.Po  libmisc_a-opencl_utils.Po  libmisc_a-timer.Po
clhaptic/libprofiler/: Doxyfile  Makefile.am  phasecontrol.cpp
clhaptic/libprofiler/.deps/: libprofiler_a-eventlist.Po  libprofiler_a-phasecontrol.Po
clhaptic/librules/.deps/: librules_a-ad_rule.Po
clhaptic/libtopology/: fission_topology.cpp  fissionutils.h  multidevice_topology.cpp  multidevice_topology.h
clhaptic/libtopology/.deps/: libtopology_a-fission_topology.Po  libtopology_a-fissionutils.Po  libtopology_a-multidevice_topology.Po
clsurf/src/: cvutils.h  fasthessian.cpp
fir/: FIR_tapchange.cpp  FIR_tapchange.h  Makefile.am  tap-change-device.cpp
particles/Common/: Common.vcxproj  Common.vcxproj.filters
particles/Common/Base/: SyncObjects.h  ThreadPool.h
particles/Common/DeviceUtils/: DeviceDrawGL.inl  DeviceUtilsCL.inl
particles/Common/Geometry/: Aabb.h
particles/Common/Math/: Array.h  Matrix3x3.h  RadixSortHost.cpp
particles/Common/Utils/: Stopwatch.h
particles/TestBed/: TestBed.vcxproj
particles/TestBed/Demos/: Dem2Demo.h  UniformGrid.inl
trunk/: Makefile.am
trunk/clhaptic/libanalysis-devices/: Makefile.am  analysis-devices-utils.h  device-compare-images.h  monitored-queue.cpp
trunk/clhaptic/libanalysis-devices/.deps/: libanalysis_devices_a-device-compare-images.Po
trunk/clhaptic/libinterceptor/: Create_Buffers.c  Create_Contexts_Platforms.c  Enqueue_Kernels_Tasks.c  cl_pm.h  malloc.c  mymalloc.c
trunk/clhaptic/libmisc/: Makefile.am  kernel-object.cpp  kernel-object.h  logger.cpp  logger.h  opencl_utils.cpp  opencl_utils.h  timer.h
trunk/clhaptic/libprofiler/: eventlist-phasecontrol.cpp  eventlist.cpp  eventlist.h  eventtypes.h  phasecontrol.h  value-profiler.cpp  value-profiler.h
trunk/clhaptic/libprofiler/.deps/: libprofiler_a-eventlist-phasecontrol.Po  libprofiler_a-value-profiler.Po
trunk/clhaptic/librules/: Makefile.am  ad_rule.cpp  ad_rule.h  ad_rule_vec.cpp  ad_rule_vec.h  rule_type.h
trunk/clhaptic/librules/.deps/: librules_a-ad_rule_vec.Po
trunk/clhaptic/libtopology/: Makefile.am  fission_topology.h  fissionutils.cpp
trunk/clsurf/src/: Makefile.am  clutils.cpp  cvutils.cpp  fasthessian.h  main.cpp  surf.h
trunk/fir/: Makefile.in  tap-change-device.h
trunk/particles/: DVPX10.sln  README.txt
trunk/particles/Common/Base/: ThreadPool.cpp
trunk/particles/Common/DeviceUtils/: DeviceDraw.h  DeviceUtilsSelector.h
trunk/particles/Common/Math/: Math.h  Quaternion.h  float4.inl
trunk/particles/TestBed/: Demo.h  main.cpp
trunk/particles/TestBed/Demos/: Dem2Demo.cpp
wiki/: Valar.wiki
