lib_LIBRARIES = libanalysis-devices.a

libanalysis_devices_a_SOURCES = \
	analysis-devices.cpp \
	device-compare-images.cpp \
	monitored-queue.cpp

libanalysis_devices_a_CPPFLAGS = -I$(top_srcdir)/clhaptic/libprofiler -I$(top_srcdir)/clhaptic/libmisc -I$(top_srcdir)/clhaptic/librules -I$(top_srcdir)/clhaptic/libtopology -I$(AMDAPPSDKROOT)/include
